--- a/app/views/company_admin/top/index.html.erb
+++ b/app/views/company_admin/top/index.html.erb
@@ -1,2 +1,10 @@
 <% provide(:title,  "企業管理者") %>
+
+<!--header設定-->
+<%= render "shared/head" %>
+
+<!--flash設定-->
+<%= render "shared/flash" %>
+
+
 <h1><%= '企業管理者TOP' %></h1>
