--- a/app/views/layouts/company_admin.html.erb
+++ b/app/views/layouts/company_admin.html.erb
@@ -8,15 +8,22 @@
 
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/cdc0e6c98c.js" crossorigin="anonymous"></script>
 
     <!-- CSS Files -->
-    <link href="/assets/bootstrap.min.css" rel="stylesheet" />
-    <link href="/assets/now-ui-kit.css?v=1.2.0" rel="stylesheet" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <%= stylesheet_link_tag 'company_admin', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+    <!--JS-->
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    
+
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
   </head>
 
   <body>
@@ -29,22 +36,3 @@
     </div>
   </body>
 </html>
-
-<!-- Plugins -->
-
-<!--   Core JS Files   -->
-<script src="/assets/core/jquery.min.js" type="text/javascript"></script>
-<script src="/assets/core/popper.min.js" type="text/javascript"></script>
-<script src="/assets/core/bootstrap.min.js" type="text/javascript"></script>
-
-<!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-<script src="/assets/plugins/bootstrap-switch.js"></script>
-
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="/assets/plugins/nouislider.min.js" type="text/javascript"></script>
-
-<!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
-<script src="/assets/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
-
-<!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
-<script src="/assets/now-ui-kit.js?v=1.2.0" type="text/javascript"></script>
